--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
+    "beautiful":"prettier --single-quote --write --tab-width 4 --trailing-comma all 'src/**/*.{js,json,scss}'",
     "start": "nodemon --inspect src/index.js",
     "watch": "node-sass --watch src/resources/scss --output src/public/css",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,13 +22,22 @@
     "url": "https://github.com/NguyenTatHien/Nodejs_Practice/issues"
   },
   "homepage": "https://github.com/NguyenTatHien/Nodejs_Practice#readme",
+  "lint-staged": {
+    "src/**/*.{js,json,scss}": "prettier --single-quote --write --tab-width 4 --trailing-comma all"
+  },
+  "hooks": {
+    "pre-commit": "lint-staged"
+  },
   "dependencies": {
     "express": "^4.19.1",
     "express-handlebars": "^7.1.2"
   },
   "devDependencies": {
+    "husky": "^9.0.11",
+    "lint-staged": "^15.2.2",
     "morgan": "^1.10.0",
     "node-sass": "^9.0.0",
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.0",
+    "prettier": "^3.2.5"
   }
 }
