--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
   "dependencies": {
     "express": "^4.19.1",
     "express-handlebars": "^7.1.2",
-    "mongoose": "^8.3.4"
+    "method-override": "^3.0.0",
+    "mongoose": "^8.3.4",
+    "mongoose-slug-generator": "^1.0.4"
   },
   "devDependencies": {
     "lint-staged": "^15.2.2",
