--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "src/**/*.{js,json,scss}": "prettier --single-quote --write --tab-width 4 --trailing-comma all"
   },
   "dependencies": {
+    "bootstrap-icons": "^1.11.3",
     "express": "^4.19.1",
     "express-handlebars": "^7.1.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.3.4",
+    "mongoose": "^6.10.0",
     "mongoose-delete": "^1.0.2",
     "mongoose-slug-generator": "^1.0.4"
   },
